tons of improvements add fancy hamburger menu under profile reorg Profile into ProfileMenu fix pages handle route/page auth correctly

--- a/webui/src/assets/scss/base/_reset.scss
+++ b/webui/src/assets/scss/base/_reset.scss
@@ -110,3 +110,12 @@ html, body, #root, #root > div {
     width: 100%;
     overflow: hidden;
 }
+
+#root {
+    background-color: black;
+}
+
+#bm-outer-container {
+    background: #333333;
+    position: absolute;
+}
