--- a/webui/src/assets/scss/components/_profile.scss
+++ b/webui/src/assets/scss/components/_profile.scss
@@ -1,3 +1,11 @@
+.user-profile {
+    display: flex !important;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    padding: 4px;    
+}
+
 .profile-avatar {
     width: 48px;
     height: 48px;
@@ -14,3 +22,18 @@
 .profile-toggle {
     cursor: pointer;
 }
+
+.bm-item {
+    background-color: lightgrey;
+    color: black;
+    padding: 8px;
+}
+
+.menu-user-profile {
+    background-color: grey;
+    padding: 8px;
+    color: whitesmoke;
+    display: flex !important;
+    border-radius: 4px;
+}
+
