--- a/webui/src/assets/scss/style.scss
+++ b/webui/src/assets/scss/style.scss
@@ -4,8 +4,11 @@
 @import './abstracts/mixins';
 @import './base/reset';
 @import './base/helper';
+@import './components/appmenu';
 @import './components/button';
 @import './components/navbar';
 @import './components/profile';
 @import './components/footer';
+@import './components/burgermenu';
 @import './pages/home';
+@import './components/shorturls';
