--- a/webui/src/assets/scss/base/_reset.scss
+++ b/webui/src/assets/scss/base/_reset.scss
@@ -105,7 +105,7 @@ textarea {
 }
 
 
-html, body, #root, #root > div {
+html, body, #root, #content-container {
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -115,7 +115,7 @@ html, body, #root, #root > div {
     background-color: black;
 }
 
-#bm-outer-container {
+#content-container {
     background: #333333;
     position: absolute;
 }
