--- a/webui/src/assets/scss/components/_footer.scss
+++ b/webui/src/assets/scss/components/_footer.scss
@@ -13,3 +13,17 @@
         margin-top: -8px;
     }
 }
+
+@keyframes glow {
+    0% {
+        text-shadow: 0 0 10px white;
+    }
+    100% {
+        text-shadow: 0 0 10px grey;
+    }
+}
+
+.dev-footer p {
+    color: grey;
+    animation: glow 3s ease-in-out infinite;
+}
