--- a/webui/src/assets/scss/pages/_home.scss
+++ b/webui/src/assets/scss/pages/_home.scss
@@ -11,7 +11,9 @@
 .main-wrapper {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 114px);
+  height: calc(100vh - 32px);
   overflow-x: auto;
   scrollbar-width: thin;
+  padding-left: 00px;
+  padding-top: 64px;
 }
