--- a/webui/src/assets/scss/pages/_home.scss
+++ b/webui/src/assets/scss/pages/_home.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 32px);
-  overflow-x: auto;
+  overflow: hidden;
   scrollbar-width: thin;
   padding-left: 00px;
   padding-top: 64px;
