--- a/webui/src/assets/scss/style.scss
+++ b/webui/src/assets/scss/style.scss
@@ -11,4 +11,5 @@
 @import './components/footer';
 @import './components/burgermenu';
 @import './pages/home';
+@import './pages/shorturls';
 @import './components/shorturls';
