--- a/webui/src/assets/scss/base/_reset.scss
+++ b/webui/src/assets/scss/base/_reset.scss
@@ -129,3 +129,9 @@ p.no-interaction {
 .modal-content {
     background-color: #444444;
 }
+
+@media screen and (max-width: 768px){
+    .mobile-hide {
+        display: none !important;
+    }
+}
