--- a/webui/src/assets/scss/components/_burgermenu.scss
+++ b/webui/src/assets/scss/components/_burgermenu.scss
@@ -59,6 +59,8 @@
     text-align: center;
     font-size: 24px;
     border-top: none;
+    cursor: pointer;
+    flex-direction: column;
 }
 
 .bm-item > .menu-user-profile {
